--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,6 @@
   This is my homepage made with Zola.
 </h1>
 <p><a href="{{ get_url(path="@/papers/_index.md") }}">List of publications</a></p>
+
+{{ section.content | safe }}
 {% endblock content %}
