--- a/templates/papers.html
+++ b/templates/papers.html
@@ -19,13 +19,13 @@
     <br/>
     {% if bib.tags.journal %}
     {% if bib.tags.doi or bib.tags.url %}
-    <a href="{% if bib.tags.doi %}https://doi.org/{{bib.tags.doi}}{% else %}{{bib.tags.url}}{% endif %}">
+    <a href="{% if bib.tags.doi %}https://doi.org/{{bib.tags.doi}}{% else %}{{bib.tags.url}}{% endif %}" target="_blank">
       {% endif %}
       <em>{{ bib.tags.journal }}</em>
       {% if bib.tags.volume %}
       <b>{{ bib.tags.volume }}</b>{% if bib.tags.number %}({{ bib.tags.number }}){% endif %}
       {% endif %}
-      
+
       {% if bib.tags.pages %}{{ bib.tags.pages | replace(from="--", to="–") }}{% endif %}
       ({{ bib.tags.date }})
       {% if bib.tags.doi or bib.tags.url %}
@@ -33,28 +33,40 @@
     {% endif %}
 
     {% else %}
-    
+
     {% if bib.tags.note %} {{ bib.tags.note |
     replace(from="\emph{",to="<em>") | replace(from="}",to="</em>") | safe }} {{ bib.tags.date }}<br/> {% endif %}
-    
+
     {% if bib.tags.doi %}
-    DOI: <a href="https://doi.org/{{bib.tags.doi}}">{{bib.tags.doi}}</a><br/>
+    DOI: <a href="https://doi.org/{{bib.tags.doi}}" target="_blank">{{bib.tags.doi}}</a><br/>
     {% elif bib.tags.url and not bib.tags.eprinttype %}
-    URL: <a href="{{bib.tags.url}}">{{bib.tags.url}}</a><br/>
-    {% endif %}
-    {% endif %}
-    
-    {% if bib.tags.eprinttype and bib.tags.eprinttype == "arXiv" %}
-    arXiv: 
-    {% if bib.tags.url %}
-    <a href="{{bib.tags.url}}">{{bib.tags.url | split(pat="/") | last}}</a>
-    {% elif bib.tags.eprint %}
-    <a href="https://arxiv.org/abs/{{bib.tags.eprint}}">{{bib.tags.eprint}}</a>
-    {% if bib.tags.eprintclass %}[{{bib.tags.eprintclass}}]{% endif %}
+    URL: <a href="{{bib.tags.url}}" target="_blank">{{bib.tags.url}}</a><br/>
     {% endif %}
     {% endif %}
 
+    {% if bib.tags.eprinttype and bib.tags.eprinttype == "arXiv" %}
+    {% if bib.tags.url %}
+    {% set eprint = bib.tags.url | split(pat="/") | last %}
+    {% elif bib.tags.eprint %}
+    {% set eprint = bib.tags.eprint %}
+    {% endif %}
+    arXiv:
+    <a href="https://arxiv.org/abs/{{eprint}}" target="_blank">{{eprint}}</a>
+    {% if bib.tags.eprintclass %}[{{bib.tags.eprintclass}}]{% endif %}
+    {% endif %}
+
     {% if bib.tags.isbn %}ISBN: {{bib.tags.isbn}} {% endif %}
+    &nbsp;
+    {% if bib.tags.file %}
+    <a href="{{bib.tags.file}}" target="_blank"><span class="fa-solid fa-file-pdf"></span></a>
+    {% else %}
+    <a href="https://arxiv.org/pdf/{{eprint}}.pdf" target="_blank"><span class="fa-solid fa-file-pdf"></span></a>
+    {% endif %}
+    {% if bib.tags.doi %}
+    <a href="javascript:navigator.clipboard.writeText('{{ bib.tags.doi }}');" title="Copy DOI to clipboard">
+    <span class="ai ai-doi"></span>
+    </a>
+    {% endif %}
   </li>
   {% endfor %}
 </ol>
