Portrait and simple menu bar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -389,3 +389,9 @@ h6 {
 .big-icon:hover {
     transform: scale(1.2);
 }
+
+.portrait {
+    border-radius: 50%;
+    width: 20em;
+    height: 20em;
+}
