--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+  <menu>
+    ΤΙΠΟΤΑ
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="{{ get_url(path="@/papers/_index.md") }}">Publications</a></li>
+    </ul>
+  </menu>
   <section class="section">
     <div class="container">
       {% block content %} {% endblock %}
