--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{% if section and section.title %}{{ section.title }}{% elif title %}{{ title }}{% else %}Hello there{% endif %}</title>
+  <title>{{ config.extra.pagename }}{% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 
@@ -13,6 +13,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="{{ get_url(path="@/papers/_index.md") }}">Publications</a></li>
+      <li><a href="{{ get_url(path="@/conferences/_index.md") }}">Conferences</a></li>
     </ul>
   </menu>
   <section class="section">
