--- a/templates/conference.html
+++ b/templates/conference.html
@@ -2,6 +2,9 @@
 {% import "macros.html" as macros %}
 
 {% block page_content %}
+{% if page.extra.image %}
+<img class="conference-image" src="/img/places/{{page.extra.image}}" />
+{% endif %}
 <h1 class="title">
   {{ page.title }}
 </h1>
