Improved menu appearance

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -242,15 +242,11 @@ h6 {
 html {
   background-color: var(--bkg-color);    /**/
   color: var(--text-color);               /**/
-  margin: 1em;
 }
 body {
   background-color: var(--body-background);    /**/
   color: var(--text-color);               /**/
   margin: 0 auto;
-  /* max-width: 23cm; */
-  border: 1pt solid var(--border-color);    /**/
-  padding: 1em;
 }
 code {
   background-color: var(--bkg-color);    /**/
@@ -380,6 +376,42 @@ h6 {
 .itsame {
     font-weight: bold;
     color: var(--color-1);
+}
+
+menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    padding: 1em;
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(0,0,0,.11);
+    background: var(--body-background);
+    margin: 0;
+    min-height: 2em;
+}
+
+menu h3 {
+    display: inline;
+}
+
+menu ul {
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    float: right;
+}
+
+menu ul li {
+    margin: 0;
+    margin-right: 2em;
+}
+
+.container {
+    margin-top: 6em;
+    padding: 1em;
 }
 
 .big-icon {
