--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,16 @@
 
 <body>
   <menu>
-    ΤΙΠΟΤΑ
+    <h3>{{ config.extra.pagename }}</h3>
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="{{ get_url(path="@/papers/_index.md") }}">Publications</a></li>
       <li><a href="{{ get_url(path="@/conferences/_index.md") }}">Conferences</a></li>
     </ul>
   </menu>
-  <section class="section">
-    <div class="container">
-      {% block content %} {% endblock %}
-    </div>
-  </section>
+  <div class="container">
+    {% block content %} {% endblock %}
+  </div>
 </body>
 
 </html>
