--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %}
+{% import "macros.html" as macros %}
+
+{% block title %} – {{ section.title }}{% endblock title %}
 
 {% block content %}
+<div class="person-info">
+  <p><img class="portrait" src="/img/stefanos.jpg" /></p>
+  <h1>{{ config.extra.whatsmyname }}</h1>
+  <h4>{{ config.extra.whatsmytitle }}</h4>
 
-<p><img class="portrait" src="/img/stefanos.jpg" /></p>
-<h3>{{ config.extra.whatsmyname }}</h3>
+  <ul class="network">
+    <li>{{ macros::badge(url="mailto:jagot@tipota.org", icon="fa-envelope") }}</li>
+    <li>{{ macros::badge(url="https://scholar.google.com/citations?user=pmg1sp8AAAAJ", icon="ai-google-scholar", collection="ai") }}</li>
+    <li>{{ macros::badge(url="https://www.researchgate.net/profile/Stefanos_Carlstroem", icon="fa-researchgate", collection="fa-brands") }}</li>
+    <li>{{ macros::badge(url="https://orcid.org/0000-0002-1230-4496", icon="fa-orcid", collection="fa-brands") }}</li>
+    <li>{{ macros::badge(url="https://arxiv.org/find/physics/1/au:+Carlstrom_S/0/1/0/all/0/1", icon="ai-arxiv", collection="ai") }}</li>
+    <li>{{ macros::badge(url="https://se.linkedin.com/in/stefanos-carlstr%c3%b6m-80624238", icon="fa-linkedin", collection="fa-brands") }}</li>
+    <li>{{ macros::badge(url="https://github.com/jagot", icon="fa-github", collection="fa-brands") }}</li>
+  </ul>
+</div>
+
 {{ section.content | safe }}
 {% endblock content %}
